feat: javafx config done