@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>edu.ezip.ing1.pds</groupId>
         <artifactId>smart-city-by-ezip</artifactId>
@@ -15,33 +16,35 @@
 
     <build>
         <plugins>
+
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
-                        <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>run</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>edu.ezip.ing1.pds.MainFrontEnd</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <mainClass>edu.ezip.ing1.pds.MainView</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>${javafx.module.path}</option> <!-- The path to your JavaFX SDK -->
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option> <!-- Add other JavaFX modules if needed -->
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <javafx.module.path>"/home/onecode24/Documents/School/ING1/SIRIUS/openjfx-23.0.2_linux-x64_bin-sdk/javafx-sdk-23.0.2/lib"</javafx.module.path>
     </properties>
 
     <dependencies>
@@ -93,7 +96,18 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-
+        <!-- JavaFX Dependencies -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21</version>
+        </dependency>
     </dependencies>
+
 
 </project>
